2010-05-01  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (find_row_end): New function, refactored from display_line.
	(display_line): Use it.
	(extend_face_to_end_of_line): In almost-filled rows, extend only
	if the row is R2L and not continued.
	(display_line): Fix prepending of truncation glyphs to R2L rows.
	(insert_left_trunc_glyphs): Support addition of left truncation
	glyphs to R2L rows.
	(set_cursor_from_row): Don't place cursor on the vertical border
	glyph between adjacent windows.
	(try_cursor_movement): Don't assume that row->end == (row+1)->start,
	test for that explicitly.

2010-04-27  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (set_cursor_from_row): Fix a crash when a display string
	is continued to the next line.

2010-04-25  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (set_cursor_from_row): Don't return zero if cursor was
	found by `cursor' property of a display string.
	(display_line): Preserve overlay and string info in row->end.

2010-04-25  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (display_line): Fix crash with bidi display on the last
	empty line.  (Bug#6030)
	(iterate_out_of_display_property): New function, body from pop_it.
	(pop_it): Use it.

2010-04-24  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (display_line): Use `reseat' instead of `reseat_1', and
	use `get_next_display_element' and `set_iterator_to_next' to
	advance to the next character, when looking for the character that
	begins the next row.

	* .gdbinit: Add a "set Fmake_symbol" line to force GDB to load the
	definition of "struct Lisp_Symbol".

2010-04-23  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (pop_it): When the stack is popped after displaying
	from a string, bidi-iterate to exit from the text portion covered
	by the `display' property or overlay.  (Bug#5988, bug#5920)
	(set_iterator_to_next, next_element_from_composition): Fix display
	of composed characters from L2R scripts in bidi buffers.
	(Bug#5977)

2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>
